--- a/JavaApplication54/src/ventanas/ConsultaPorRubro.form
+++ b/JavaApplication54/src/ventanas/ConsultaPorRubro.form
@@ -150,7 +150,7 @@
 
               <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
               <SubComponents>
-                <Component class="javax.swing.JTable" name="jTable1">
+                <Component class="javax.swing.JTable" name="TablaRubro">
                   <Properties>
                     <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="33" green="33" red="33" type="rgb"/>
@@ -224,14 +224,17 @@
             </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="5">
-                <StringItem index="0" value="Seleccione un rubro&#x9;"/>
-                <StringItem index="1" value="Comestible&#x9;"/>
+                <StringItem index="0" value="Seleccione un rubro"/>
+                <StringItem index="1" value="Comestible"/>
                 <StringItem index="2" value="Perfumeria"/>
                 <StringItem index="3" value="Limpieza"/>
-                <StringItem index="4" value=" "/>
+                <StringItem index="4" value=""/>
               </StringArray>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ComboBoxRubroActionPerformed"/>
+          </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
